# stack

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/plainstudio/stackcasino/: ExampleInstrumentedTest.kt  HiltTestRunner.kt
app/src/androidTest/java/com/plainstudio/stackcasino/di/: AppModuleTest.kt
app/src/androidTest/java/com/plainstudio/stackcasino/feature/history/: HistoryScreenTest.kt
app/src/androidTest/java/com/plainstudio/stackcasino/feature/lobby/: LobbyScreenTest.kt
app/src/androidTest/java/com/plainstudio/stackcasino/feature/wallet/: WalletScreenTest.kt
app/src/androidTest/java/com/plainstudio/stackcasino/navigation/: StackNavHostTest.kt
app/src/androidTest/java/com/plainstudio/stackcasino/ui/components/: BalancePillTest.kt  (+2 more)
app/src/debug/: AndroidManifest.xml
app/src/debug/java/com/plainstudio/stackcasino/: HiltTestActivity.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/plainstudio/stackcasino/: MainActivity.kt  StackApp.kt  StackCasinoApp.kt
app/src/main/java/com/plainstudio/stackcasino/di/: AppModule.kt  AssistantModule.kt  AuthModule.kt  NewsModule.kt
app/src/main/java/com/plainstudio/stackcasino/engine/: NativeGameEngine.kt
app/src/main/java/com/plainstudio/stackcasino/model/: Game.kt
app/src/main/java/com/plainstudio/stackcasino/navigation/: Route.kt  StackNavHost.kt  StartDestination.kt
app/src/main/res/drawable/: ic_brand_splash.xml  ic_game_blackjack.xml  ic_game_coinflip.xml  ic_game_crash.xml  ic_game_mines.xml  ic_game_roulette.xml  ic_google_g.xml  ic_launcher_background.xml  ic_launcher_monochrome.xml  ic_news_placeholder.xml  ic_tab_history.xml  ic_tab_lobby.xml  ic_tab_news.xml  ic_tab_profile.xml  ic_tab_wallet.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/plainstudio/stackcasino/: ExampleUnitTest.kt  StackCasinoAppTest.kt
app/src/test/java/com/plainstudio/stackcasino/navigation/: RouteTest.kt  StartDestinationTest.kt
app/src/test/java/com/plainstudio/stackcasino/testing/: MainDispatcherRule.kt
config/detekt/: detekt.yml
cpp_engine/: .gitignore  CMakeLists.txt
cpp_engine/include/: ProvablyFairCore.h  Sha256.h
cpp_engine/src/: ProvablyFairCore.cpp  main.cpp  native-lib.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+66 files in other folders)
